<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="application_name_generic">Gadgetbridge</string>
    <string name="title_activity_controlcenter_generic">Gadgetbridge</string>
    <string name="about_activity_title_generic">About Gadgetbridge</string>
    <string name="about_description_generic">Cloudless copylefted libre replacement for closed source Android gadget apps from vendors.</string>
    <string name="gadgetbridge_running_generic">Gadgetbridge running</string>
    <string name="application_name_banglejs_main">Bangle.js Gadgetbridge</string>
    <string name="title_activity_controlcenter_banglejs_main">Bangle.js Gadgetbridge</string>
    <string name="about_activity_title_banglejs_main">About Bangle.js Gadgetbridge</string>
    <string name="about_description_banglejs_main">Android companion app for Bangle.js built on top of the Gadgetbridge project, with added Internet Access.\n\nDue to Google Play Store policies, we are not allowed a donation link in the app itself, but if you like this app please consider donating via the Gadgetbridge homepage below.</string>
    <string name="gadgetbridge_running_banglejs_main">Bangle.js running</string>
    <string name="application_name_banglejs_nightly">Bangle.js Gadgetbridge (Nightly)</string>
    <string name="title_activity_controlcenter_banglejs_nightly">Bangle.js Gadgetbridge (Nightly)</string>
    <string name="about_activity_title_banglejs_nightly">About Bangle.js Gadgetbridge (Nightly)</string>
    <string name="about_description_banglejs_nightly">Android companion app for Bangle.js built on top of the Gadgetbridge project, with added Internet Access.\n\nDue to Google Play Store policies, we are not allowed a donation link in the app itself, but if you like this app please consider donating via the Gadgetbridge homepage below.</string>
    <string name="gadgetbridge_running_banglejs_nightly">Nightly Bangle.js running</string>
    <string name="application_name_main_nightly">Gadgetbridge (Nightly)</string>
    <string name="title_activity_controlcenter_main_nightly">Gadgetbridge Nightly</string>
    <string name="about_activity_title_main_nightly">About Gadgetbridge Nightly</string>
    <string name="about_description_main_nightly">Cloudless copylefted libre replacement for closed source Android gadget apps from vendors. Nightly releases of Gadgetbridge. It cannot be installed if you already have either the Gadgetbridge or the Pebble app installed, due to a conflict in the Pebble provider.</string>
    <string name="gadgetbridge_running_main_nightly">Nightly GB running</string>
    <string name="application_name_main_nopebble">Gadgetbridge (Nightly, No Pebble provider)</string>
    <string name="title_activity_controlcenter_main_nopebble">Gadgetbridge Nightly No Pebble </string>
    <string name="about_activity_title_main_nopebble">About Gadgetbridge Nightly No Pebble</string>
    <string name="about_description_main_nopebble">Cloudless copylefted libre replacement for closed source Android gadget apps from vendors. Nightly releases of Gadgetbridge. This version has the Pebble provider renamed to prevent conflicts, so some Pebble related integrations will not work, but it can be installed alongside existing Gadgetbridge installation.</string>
    <string name="gadgetbridge_running_main_nopebble">Nightly NoPebble GB running</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug">Debug</string>
    <string name="action_quit">Quit</string>
    <string name="action_donate">Donate</string>
    <string name="controlcenter_fetch_activity_data">Synchronize</string>
    <string name="controlcenter_find_device">Find lost device</string>
    <string name="find_lost_device_message">Search for %1$s?</string>
    <string name="controlcenter_take_screenshot">Take Screenshot</string>
    <string name="controlcenter_power_off">Power Off</string>
    <string name="controlcenter_power_off_confirm_title">Power Off</string>
    <string name="controlcenter_power_off_confirm_description">Are you sure you want to power off the device?</string>
    <string name="controlcenter_change_led_color">Change LED Color</string>
    <string name="controlcenter_change_fm_frequency">Change FM Frequency</string>
    <string name="controlcenter_connect">Connect…</string>
    <string name="controlcenter_disconnect">Disconnect</string>
    <string name="controlcenter_delete_device">Delete Device</string>
    <string name="controlcenter_delete_device_name">Delete %1$s</string>
    <string name="controlcenter_delete_device_dialogmessage">This will delete the device and all associated data!</string>
    <string name="controlcenter_set_alias">Set Alias</string>
    <string name="controlcenter_navigation_drawer_open">Open navigation drawer</string>
    <string name="controlcenter_navigation_drawer_close">Close navigation drawer</string>
    <string name="controlcenter_snackbar_need_longpress">Long press the card to disconnect</string>
    <string name="controlcenter_snackbar_disconnecting">Disconnecting</string>
    <string name="controlcenter_snackbar_connecting">Connecting…</string>
    <string name="controlcenter_snackbar_requested_screenshot">Taking a screenshot of the device</string>
    <string name="controlcenter_calibrate_device">Calibrate Device</string>
    <string name="controlcenter_get_heartrate_measurement">Get heart rate measurement</string>
    <string name="device_card_activity_card_title">Activity info on device card</string>
    <string name="device_card_activity_card_title_summary">Choose what activity details are displayed on device card</string>
    <string name="prefs_activity_in_device_card_title">Show Activity info on device card</string>
    <string name="prefs_activity_in_device_card_title_summary">Show current steps, distance or sleep on device card</string>
    <string name="prefs_activity_in_device_card_sleep_title">Sleep</string>
    <string name="prefs_activity_in_device_card_sleep_title_summary">Show sleep duration</string>
    <string name="prefs_activity_in_device_card_distance_title_summary">Distance is calculated from steps and step length (adjustable in Settings - About you)</string>
    <string name="prefs_activity_in_device_card_steps_title_summary">Show total steps</string>
    <string name="battery_detail_activity_title">Battery info</string>
    <string name="battery_level">Battery level</string>
    <string name="calendar_day">Day</string>
    <string name="calendar_week">Week</string>
    <string name="calendar_two_weeks">Two weeks</string>
    <string name="calendar_month">Month</string>
    <string name="calendar_three_months">3 months</string>
    <string name="calendar_six_months">6 months</string>
    <string name="calendar_year">Year</string>
    <string name="title_activity_debug">Debug</string>
    <string name="debugactivity_really_factoryreset_title">Really factory reset?</string>
    <string name="debugactivity_really_factoryreset">Doing a factory reset will delete all data from the connected device (if supported). Xiaomi/Huami devices also change Bluetooth MAC address, so they appear as a new devices to Gadgetbridge.</string>
    <string name="title_activity_appmanager">App Manager</string>
    <string name="appmanager_cached_watchapps_watchfaces">Apps in cache</string>
    <string name="appmanager_installed_watchapps">Installed apps</string>
    <string name="appmanager_installed_watchfaces">Installed watchfaces</string>
    <string name="appmananger_app_delete">Delete</string>
    <string name="appmananger_app_delete_cache">Delete and remove from cache</string>
    <string name="appmananger_app_reinstall">Reinstall</string>
    <string name="appmanager_app_share">Share</string>
    <string name="appmanager_app_openinstore">Search in Pebble appstore</string>
    <string name="appmanager_health_activate">Activate</string>
    <string name="appmanager_health_deactivate">Deactivate</string>
    <string name="appmanager_hrm_activate">Activate HRM</string>
    <string name="appmanager_hrm_deactivate">Deactivate HRM</string>
    <string name="appmanager_weather_activate">Activate System Weather app</string>
    <string name="appmanager_weather_deactivate">Deactivate System Weather app</string>
    <string name="appmanager_weather_install_provider">Install the Weather Notification app</string>
    <string name="app_configure">Configure</string>
    <string name="app_move_to_top">Move to top</string>
    <string name="appmanager_item_outdated">(outdated)</string>
    <string name="title_activity_notification_management">Notification settings</string>
    <string name="blacklist_all_for_notifications">Blacklist all for notifications</string>
    <string name="whitelist_all_for_notifications">Whitelist all for notifications</string>
    <string name="check_all_applications">Check all applications</string>
    <string name="uncheck_all_applications">Uncheck all applications</string>
    <string name="title_activity_calblacklist">Blacklisted Calendars</string>
    <string name="title_activity_fw_app_insaller">FW/App installer</string>
    <string name="fw_upgrade_notice">You are about to install the %s.</string>
    <string name="fw_upgrade_notice_amazfitbip">You are about to install the %s firmware on your Amazfit Bip.\n\nPlease make sure to install the .fw file, then the .res file, and finally the .gps file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res and .gps if these files are exactly the same as the ones previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitbip_lite">You are about to install the %s firmware on your Amazfit Bip Lite.\n\nPlease make sure to install the .fw file, and after that the .res file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="zetime_prefs_inactivity_repetitions">Repetitions</string>
    <string name="zetime_prefs_inactivity_mo">Monday</string>
    <string name="zetime_prefs_inactivity_tu">Tuesday</string>
    <string name="zetime_prefs_inactivity_we">Wednesday</string>
    <string name="zetime_prefs_inactivity_th">Thursday</string>
    <string name="zetime_prefs_inactivity_fr">Friday</string>
    <string name="zetime_prefs_inactivity_sa">Saturday</string>
    <string name="zetime_prefs_inactivity_su">Sunday</string>
    <string name="mi2_prefs_do_not_disturb">Do Not Disturb</string>
    <string name="mi2_prefs_do_not_disturb_summary">The band won\'t receive notifications while active</string>
    <string name="mi2_prefs_inactivity_warnings">Inactivity warnings</string>
    <string name="mi2_prefs_inactivity_warnings_summary">The band will vibrate when you have been inactive for a while</string>
    <string name="mi2_prefs_inactivity_warnings_threshold">Inactivity threshold (in minutes)</string>
    <string name="mi2_prefs_do_not_disturb_start">Start time</string>
    <string name="mi2_prefs_do_not_disturb_end">End time</string>
    <string name="mi2_prefs_do_not_disturb_lift_wrist">Activate display upon lift during Do Not Disturb</string>
    <string name="do_not_disturb_lift_wrist_summary">Only if activate display upon lift enabled</string>
    <string name="pref_repetitions">Repetitions</string>
    <string name="pref_monday">Monday</string>
    <string name="pref_tuesday">Tuesday</string>
    <string name="pref_wednesday">Wednesday</string>
    <string name="pref_thursday">Thursday</string>
    <string name="pref_friday">Friday</string>
    <string name="pref_saturday">Saturday</string>
    <string name="pref_sunday">Sunday</string>
</resources>